Remove duplicate birthday wishes and add new messages

--- a/index.html
+++ b/index.html
@@ -196,12 +196,9 @@
       <div class="wish">🎉 May your heart be filled with laughter and joy! 💕</div>
       <div class="wish">🌈 You're the sparkle that makes every moment special! 💖</div>
       <div class="wish">🎁 Sending love, hugs, and magical wishes your way! 💌</div>
-      <div class="wish">🎉 Happy Birthday to the sweetest soul! ✨</div>
-      <div class="wish">🎉 May your heart be filled with laughter and joy! 💕</div>
-      <div class="wish">🌈 You're the sparkle that makes every moment special! 💖</div>
-      <div class="wish">🎉 Happy Birthday to the sweetest soul! ✨</div>
-      <div class="wish">🎉 May your heart be filled with laughter and joy! 💕</div>
-      <div class="wish">🌈 You're the sparkle that makes every moment special! 💖</div>
+      <div class="wish"> तेरे लिए मेरा प्यार, तेरा भी मोहताज नहीं... ये मरते दम तक रहेगा, सिर्फ आज नहीं...🧿</div>
+      <div class=wish">अगर तुम दिल टॉड भी डौगी मेरा फिर भी मेरा दिल का हर एक टुटा टुकड़ा तुमसे मोहब्बत करेगा।। </div>
+      
 
 
     </div>
